# joplin-gen

./: Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: rust-release.yml
src/: main.rs
src/functions/: mod.rs  save_book.rs
src/views/: home_view.rs  mod.rs  new_book_view.rs  new_person_view.rs
translations/: de-DE.ftl  en.ftl
